--- a/package.json
+++ b/package.json
@@ -2,16 +2,20 @@
   "author": "Sebastien Chopin <atinux@gmail.com> (https://twitter.com/Atinux)",
   "name": "MultiBalls",
   "description": "Real time Application",
-  "version": "0.1.0",
+  "version": "0.1.0-1",
   "repository": {
     "type": "git",
     "url": "git://github.com/Atinux/MultiBalls.git"
   },
   "engines": {
-    "node": "*"
+    "node": "0.6.x"
   },
   "dependencies": {
     "express": ">=2.4.3",
     "socket.io": ">=0.8.6"
+  },
+  "subdomain": "multiballs",
+  "scripts": {
+    "start": "app.js"
   }
 }
